# markdown-api

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  configuration.yaml  docker-compose.yml  openapi.yaml  package.json  swagger.yaml
.github/workflows/: docker-commit.yml  docker-tag.yml
documents/: test-blog.md  test-documentation.md  test-wiki.md  test.md
documents/media/: test.css
src/: index.ts  main.rs
src/configuration/: configuration.ts  environment.ts  logger.ts  server.ts
src/controller/: search.controller.ts
src/dto/: search-result.dto.ts
src/functions/: configuration.rs  is_valid_markdown_filename.rs  mod.rs
src/model/: ArticleType.ts  MarkdownHeader.ts  MarkdownHeaderDto.ts  SearchResultDto.ts  article_type.rs  bad-request-nformations.model.ts  markdown-header.model.ts  markdown_header.rs  mod.rs  search_result.rs
src/parser/: date_parser.rs  mod.rs
src/routes/: get_markdown_file.rs  mod.rs  search_files.rs
src/server/: files.ts  index.ts  search.ts
src/service/: configuration.ts  fileService.ts  search.service.ts  searchService.ts
